2000-03-21  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: The mutex in the check for pthread_mutex_trylock
	should be a static var. Thanks to Wan-Teh Chang <wtc@netscape.com>
	for pointing this out.

2000-02-18  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Changed GCC version test to also accept major
	versions > 2. Thanks to Ben Gertzfield <che@debian.org> for
	pointing this out.

Thu Feb 17 12:24:55 2000  Tim Janik  <timj@gtk.org>

	* glib.h: reverted my last commit, g_thread_init() *does*
	have an implementation.

Thu Feb 17 04:25:02 2000  Tim Janik  <timj@gtk.org>

	* glib.h: remove extraneous prototype for g_thread_init().

Wed Feb 16 05:18:37 CST 2000  Shawn T. Amundson <amundson@gtk.org>

	* Released GLib 1.2.7

Mon Feb 14 22:32:49 2000  Tim Janik  <timj@gtk.org>

	* gstring.c: changed g_str_hash() to a 31 bit version based on
	a submission by Karl Nelson and hand optimized ad absurdum by
	various people ;)

Fri Feb  4 19:39:38 2000  Tim Janik  <timj@gtk.org>

	* configure.in: up version number to 1.2.7, interface age 7 and
	binary age 7.
	
	* NEWS: updates.

Thu Feb  3 14:46:53 PST 2000 Manish Singh <yosh@gimp.org>

	* acinclude.m4
	* config.guess
	* config.sub
	* ltconfig
	* ltmain.sh: upgrade to libtool 1.3.4 (bugfix only release)

	* gmain.c: removed spurious non-commented #endif suffix

Fri Jan 28 11:37:41 2000  Owen Taylor  <otaylor@redhat.com>

        Bug #4156 - Changes vaguely modelled after Scott Gifford's patch
	
	* gtimer.c (g_timer_elapsed): Never report negative times - 
	clip times to 0.

	* gmain.c (g_timeout_prepare): Guard against unexpected
	clock shifts by never setting a timeout of more than
	data->interval msecs.

Wed Jan 26 05:29:11 2000  Tim Janik  <timj@gtk.org>

        * glib.h:
        * gmain.c: s/current_time/dispatch_time/ for the dispatch() handlers.
        refetch the current time after invocation of poll() to cover up for
        the time spent in that function call.
